--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_pensionado.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_pensionado.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="e2ab7c88-ec1e-4664-8b48-0ba3162a7a04">
-	<property name="ireport.zoom" value="1.0"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rpt_pensionado" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="e2ab7c88-ec1e-4664-8b48-0ba3162a7a04">
+	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="FECHAFIN" class="java.lang.String"/>
@@ -209,7 +209,7 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 					<paragraph tabStopWidth="14"/>
 				</textElement>
-				<text><![CDATA[Institucion]]></text>
+				<text><![CDATA[Institución]]></text>
 			</staticText>
 			<line direction="BottomUp">
 				<reportElement x="284" y="0" width="1" height="12" uuid="73803e6b-d952-4344-87a0-35433a3b128e"/>
@@ -241,7 +241,7 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
 				<reportElement mode="Transparent" x="383" y="0" width="39" height="14" uuid="a5dde008-fdbd-4ff1-9c05-7c2728ccd0f6"/>
-				<textElement textAlignment="Right">
+				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.text.DateFormatSymbols().getShortMonths()[(Integer.parseInt(String.valueOf($F{Mes})))- 1].toUpperCase()]]></textFieldExpression>
@@ -254,7 +254,7 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				<textFieldExpression><![CDATA[$F{Institucion Pensionadora}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="53" y="0" width="109" height="14" uuid="d09befce-c549-4da6-99e9-5b49ea660cbb"/>
+				<reportElement x="50" y="0" width="113" height="14" uuid="d09befce-c549-4da6-99e9-5b49ea660cbb"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -282,7 +282,7 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				<textFieldExpression><![CDATA[$V{Salario_1}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="302" y="2" width="40" height="1" uuid="52f0dd76-a642-4bf5-8388-406406a8ce61"/>
+				<reportElement x="53" y="2" width="435" height="1" uuid="52f0dd76-a642-4bf5-8388-406406a8ce61"/>
 			</line>
 		</band>
 	</summary>
