--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_puestos.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_puestos.jrxml
@@ -195,50 +195,50 @@ FROM
 			</rectangle>
 			<staticText>
 				<reportElement x="75" y="0" width="79" height="22" uuid="deecbfa4-4054-4e18-a9de-2ce6b4cf3a44"/>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Nombre de Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="154" y="0" width="50" height="22" uuid="f7565169-b918-48c0-846f-59b3cf97e954"/>
-				<textElement textAlignment="Center">
+				<reportElement x="155" y="0" width="60" height="22" uuid="f7565169-b918-48c0-846f-59b3cf97e954"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha Desde ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="204" y="0" width="50" height="22" uuid="af025e36-6608-4b1b-89c4-4447144dc8f6"/>
-				<textElement textAlignment="Center">
+				<reportElement x="215" y="0" width="60" height="22" uuid="af025e36-6608-4b1b-89c4-4447144dc8f6"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha Hasta ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="255" y="0" width="110" height="22" uuid="bef44f85-92c5-4eb4-b1dd-293b1c10b91a"/>
-				<textElement textAlignment="Center">
+				<reportElement x="275" y="0" width="90" height="22" uuid="bef44f85-92c5-4eb4-b1dd-293b1c10b91a"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Ubicaciòn]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="363" y="0" width="50" height="22" uuid="1d51b996-af76-4230-88bc-b375feeddddb"/>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Sublinea]]></text>
 			</staticText>
 			<line direction="BottomUp">
-				<reportElement x="74" y="0" width="1" height="20" uuid="afa4b3e5-385f-4f71-b1da-6ed39a167ec0"/>
+				<reportElement x="74" y="1" width="1" height="20" uuid="afa4b3e5-385f-4f71-b1da-6ed39a167ec0"/>
 			</line>
 			<line direction="BottomUp">
 				<reportElement x="153" y="0" width="1" height="22" uuid="0ac4dcc9-73f9-453d-9fba-8ec25e31f939"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="203" y="0" width="1" height="22" uuid="2913bda9-a375-4738-8cfb-bc8cf297a850"/>
+				<reportElement x="215" y="0" width="1" height="22" uuid="2913bda9-a375-4738-8cfb-bc8cf297a850"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="254" y="0" width="1" height="22" uuid="bb034c9a-42b6-4e30-8197-3e7c93809bb6"/>
+				<reportElement x="276" y="0" width="1" height="22" uuid="bb034c9a-42b6-4e30-8197-3e7c93809bb6"/>
 			</line>
 			<line direction="BottomUp">
 				<reportElement x="364" y="0" width="1" height="22" uuid="95fb9df8-3734-43e7-bd49-40038e0bcd0e"/>
@@ -251,21 +251,21 @@ FROM
 			</line>
 			<staticText>
 				<reportElement x="413" y="0" width="38" height="22" uuid="b09eee6d-f224-4cc8-80ec-afaca29afe4a"/>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[No. Partida]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="451" y="0" width="45" height="22" uuid="2cc1aced-3ff2-4427-9106-7998591be07e"/>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[No. Subpartida]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="45" y="0" width="30" height="22" uuid="83bff103-8d68-466a-8b07-82e0b28cc320"/>
-				<textElement textAlignment="Center">
+				<reportElement x="44" y="0" width="30" height="22" uuid="83bff103-8d68-466a-8b07-82e0b28cc320"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Còdigo Puesto]]></text>
@@ -273,59 +273,59 @@ FROM
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="14" splitType="Stretch">
+		<band height="23" splitType="Stretch">
 			<textField isBlankWhenNull="true">
-				<reportElement x="47" y="0" width="29" height="14" uuid="6f5d15df-a0ba-4c70-8e0c-64ac33febd05"/>
-				<textElement>
+				<reportElement x="43" y="0" width="29" height="21" uuid="6f5d15df-a0ba-4c70-8e0c-64ac33febd05"/>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{puesto_CODIGOPUESTO}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="78" y="0" width="75" height="14" uuid="cbb73e51-89af-417e-97d4-25293749b3fe"/>
+				<reportElement x="78" y="0" width="74" height="23" uuid="cbb73e51-89af-417e-97d4-25293749b3fe"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{puesto_NOMBREPUESTO}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="154" y="0" width="48" height="14" uuid="1ec60a8c-0c84-4d12-b8a8-8833a3491eb1"/>
+				<reportElement x="157" y="0" width="55" height="23" uuid="1ec60a8c-0c84-4d12-b8a8-8833a3491eb1"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{puesto_FECHACONTRATACIONDESDE}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="195" y="0" width="59" height="14" uuid="d66ad430-88d3-4177-ba2d-7abc952f22a4"/>
+				<reportElement x="219" y="0" width="55" height="21" uuid="d66ad430-88d3-4177-ba2d-7abc952f22a4"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{puesto_FECHACONTRATACIONHASTA}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="261" y="0" width="103" height="14" uuid="b294a92f-5d9e-4a17-8b92-0556ca76cb76"/>
+				<reportElement x="280" y="0" width="85" height="23" uuid="b294a92f-5d9e-4a17-8b92-0556ca76cb76"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{puesto_UBICACIONPUESTO}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="369" y="0" width="43" height="14" uuid="ac50ab3d-9206-428e-b5c8-0a4d2612ddde"/>
+				<reportElement x="367" y="0" width="43" height="21" uuid="ac50ab3d-9206-428e-b5c8-0a4d2612ddde"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{puesto_SUBLINEA}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="415" y="0" width="35" height="14" uuid="1f5e3f77-0ac6-4e4e-b12e-e006546f26a3"/>
-				<textElement>
+				<reportElement x="415" y="0" width="35" height="21" uuid="1f5e3f77-0ac6-4e4e-b12e-e006546f26a3"/>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{puesto_NUMEROPARTIDAPUESTO}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="457" y="0" width="40" height="14" uuid="dd0460b3-408a-4980-a70d-6f8f1826e1c1"/>
-				<textElement>
+				<reportElement x="457" y="0" width="40" height="21" uuid="dd0460b3-408a-4980-a70d-6f8f1826e1c1"/>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{puesto_NUMEROSUBPARTIDAPUESTO}]]></textFieldExpression>
@@ -335,14 +335,14 @@ FROM
 	<summary>
 		<band height="18" splitType="Stretch">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="72" y="3" width="425" height="13" backcolor="#FFFFFF" uuid="a33c05a9-0a1e-4a94-8da9-a3d4af3d4d8b"/>
+				<reportElement mode="Opaque" x="69" y="5" width="425" height="13" backcolor="#FFFFFF" uuid="a33c05a9-0a1e-4a94-8da9-a3d4af3d4d8b"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="395" y="3" width="100" height="1" uuid="f4ce8f3a-08d3-411d-b068-674ae75c0141"/>
+				<reportElement x="44" y="1" width="453" height="1" uuid="9630ae5b-1c58-4401-ba99-b3e4df33c576"/>
 			</line>
 		</band>
 	</summary>
